--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
-* {
-font-family: Verdana, Geneva, Tahoma, sans-serif;
+* { 
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
+
 body {
-    margin: 0;
+    background-color: #9a8c98;
 }
 
 header {
@@ -13,10 +15,11 @@ header {
     background-color: #22223B;
     color: white;
     flex-wrap: wrap;
+    border-radius: 20px;
 }
 
 .headertitle {
-    margin-left: 0px;
+    text-align: center;
 
 }
 
@@ -54,3 +57,21 @@ button {
     color: white;
 }
 
+.hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+
+.solution {
+    font-size: 50px;
+    position: absolute;
+    padding-top: 400px;
+    color: white;
+}
+
+.img {
+    width: 1905px;
+    height: auto;
+}
