--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,44 @@
 
 
 body {
-    background-color: #9a8c98;
+    background-color: #f2e9e4;
 }
+
+select {
+    display: flex;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    background-color: #4A4E69;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;  
+    color: white;
+    width: 120px;
+    height: 40px;
+    padding-left: 28px;
+    font-weight: bolder;
+    font-size: medium;
+}
+
+button {
+    height: 40px;
+    width: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    background-color: #4A4E69;
+    color: white;
+    font-weight: bolder;
+    font-size: 15px;
+}
+
+/*----------------------[Header Section]----------------------*/
 
 header {
     display: flex;
@@ -20,58 +56,74 @@ header {
 
 .headertitle {
     text-align: center;
-
 }
 
 .headersubtext {
     margin-left: 5px;
 }
 
-select {
-    display: flex;
-    border-radius: 10px;
-    border-style: none;
-    background-color: #4A4E69;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;  
-    color: white;
-    width: 120px;
-    height: 40px;
-    padding-left: 28px;
-    font-weight: bolder;
-    font-size:medium;
-}
-
-
-
-button {
-    max-height: 40px;
-    width: 120px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    border-style: none;
-    background-color: #4A4E69;
-    color: white;
-}
+/*----------------------[Hero Section]----------------------*/
 
 .hero {
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
+    
 }
 
-.solution {
+.heromaintext {
     font-size: 50px;
+    position: absolute;
+    padding-top: 300px;
+    color: white;
+}
+
+.herosubtext {
+    font-size: 30px;
     position: absolute;
     padding-top: 400px;
     color: white;
 }
 
 .img {
-    width: 1905px;
+    width: 1887px;
     height: auto;
+    border-radius: 10px;
 }
+
+
+/*----------------------[About Us Section]----------------------*/
+
+.aboutus {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 150px;
+    margin-top: 10px;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: #B69087;
+    background-color: #c9ada7;
+    border-width: 10px;
+}
+
+.aboutmaintext {
+    font-size: 50px;
+    color: black;
+    margin-top: 30px;
+}
+
+.aboutparagraph {
+    text-align: center;
+
+}
+
+
+/*----------------------[Portfolio Section]----------------------*/
+
+
+/*----------------------[Services Section]----------------------*/
+
+
