--- a/styles.css
+++ b/styles.css
@@ -69,27 +69,45 @@ header {
     flex-direction: column;
     align-items: center;
     position: relative;
+    justify-content: center;
     
 }
 
 .heromaintext {
     font-size: 50px;
     position: absolute;
-    padding-top: 300px;
     color: white;
+    padding-bottom: 100px;
+    text-align: center;
+
 }
 
 .herosubtext {
     font-size: 30px;
     position: absolute;
-    padding-top: 400px;
     color: white;
+    padding-top: 150px;
+    text-align: center;
 }
 
 .img {
-    width: 1887px;
+    max-width: 1420px;
     height: auto;
     border-radius: 10px;
+}
+
+/*----------------------[Portfolio Section]----------------------*/
+
+
+.portfolio {
+    display: flex;
+    justify-content: center;
+    height: 500px;
+}
+.portfoliomaintext {
+    font-size: 50px;
+    color: black; 
+    text-align: center;
 }
 
 
@@ -103,25 +121,28 @@ header {
     padding: 0px 150px;
     margin-top: 10px;
     border-radius: 10px;
-    border-style: solid;
-    border-color: #B69087;
-    background-color: #c9ada7;
+    border-style: double;
+    border-color: #22223B;
     border-width: 10px;
+    max-width: 1410px;
 }
 
 .aboutmaintext {
     font-size: 50px;
     color: black;
     margin-top: 30px;
+    color: #22223B;
 }
 
 .aboutparagraph {
     text-align: center;
+    margin-bottom: 30px;
+    color: #22223B;
 
 }
 
 
-/*----------------------[Portfolio Section]----------------------*/
+
 
 
 /*----------------------[Services Section]----------------------*/
