--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,7 @@ body {
 select {
     display: flex;
     border-radius: 10px;
-    border-style: solid;
-    border-color: black;
+    border-style: none;
     border-width: 2px;
     background-color: #4A4E69;
     -webkit-appearance: none;
@@ -23,22 +22,23 @@ select {
     padding-left: 28px;
     font-weight: bolder;
     font-size: medium;
+    cursor: pointer;
 }
 
-button {
+.button {
     height: 40px;
     width: 120px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    border-style: solid;
-    border-color: black;
+    border-style: none;
     border-width: 2px;
     background-color: #4A4E69;
     color: white;
     font-weight: bolder;
     font-size: 15px;
+    cursor: pointer;
 }
 
 /*----------------------[Header Section]----------------------*/
@@ -103,12 +103,78 @@ header {
 .portfolio {
     display: flex;
     justify-content: center;
-    height: 500px;
+    align-items: center;
+    flex-direction: row;
+    height: 1000px;
+    margin: 40px;
+    flex-wrap: wrap;
 }
 .portfoliomaintext {
     font-size: 50px;
     color: black; 
     text-align: center;
+}
+
+.carousel {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+}
+
+.carousel > ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+} 
+
+.slideimg {
+    width: 100%;
+}
+
+.slide {
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+    transition: 200ms opacity ease-in-out;
+    transition-delay: 200ms;
+}
+
+.slide[data-active] {
+    opacity: 1;
+    z-index: 1;
+    transition-delay: 0ms;
+}
+
+.carousel-button {
+    position: absolute;
+    z-index: 2;
+    background:none;
+    border: none;
+    font-size: 4rem;
+    top: 50%;
+    color: rgba(54, 45, 45, 0.5);
+    cursor: pointer;
+    border-radius: .25rem;
+    padding: 0 .5rem;
+    background-color: rgba(0, 0, 0, .1);
+}
+
+.carousel-button:hover,
+.carousel-button:focus {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.carousel-button:focus {
+    outline: 1px solid black;
+}
+
+.carousel-button.prev {
+    left: 1rem;
+}
+
+.carousel-button.next {
+    right: 1rem;
 }
 
 
@@ -120,7 +186,7 @@ header {
     justify-content: center;
     align-items: center;
     padding: 0px 150px;
-    margin-top: 10px;
+    margin-top: 250px;
     border-radius: 10px;
     border-style: double;
     border-color: #22223B;
