--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #f2e9e4;
+    background-color: #0E0D12;
 }
 
 select {
@@ -40,6 +40,8 @@ select {
     font-size: 15px;
     cursor: pointer;
 }
+
+
 
 /*----------------------[Header Section]----------------------*/
 
@@ -78,7 +80,6 @@ header {
     color: white;
     padding-bottom: 100px;
     text-align: center;
-
 }
 
 .herosubtext {
@@ -94,7 +95,7 @@ header {
     height: auto;
     border-radius: 10px;
 }
-
+  
 
 
 /*----------------------[Portfolio Section]----------------------*/
@@ -103,19 +104,25 @@ header {
 .portfolio {
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: row;
     height: 1000px;
-    margin: 40px;
+    margin: 0px;
     flex-wrap: wrap;
 }
+
 .portfoliomaintext {
     font-size: 50px;
     color: black; 
     text-align: center;
 }
 
-.carousel {
+#offer1,
+#offer2,
+#offer3 {
+    background-color: red;
+}
+
+/* .carousel {
     width: 100vw;
     height: 100vh;
     position: relative;
@@ -151,7 +158,6 @@ header {
     background:none;
     border: none;
     font-size: 4rem;
-    top: 50%;
     color: rgba(54, 45, 45, 0.5);
     cursor: pointer;
     border-radius: .25rem;
@@ -170,12 +176,31 @@ header {
 }
 
 .carousel-button.prev {
-    left: 1rem;
+    margin-top: 50px;
 }
 
 .carousel-button.next {
-    right: 1rem;
+    margin-left: 900px;
+    margin-top: 50px;
+} */
+
+
+/*----------------------[Services Section]----------------------*/
+
+
+.pricing {
+    height: 450px;
+    display: flex;
+    justify-content: center;
 }
+
+.pricingmaintext {
+    font-size: 50px;
+    
+}
+
+
+  
 
 
 /*----------------------[About Us Section]----------------------*/
@@ -186,7 +211,7 @@ header {
     justify-content: center;
     align-items: center;
     padding: 0px 150px;
-    margin-top: 250px;
+    margin-top: 75px;
     border-radius: 10px;
     border-style: double;
     border-color: #22223B;
@@ -212,6 +237,6 @@ header {
 
 
 
-/*----------------------[Services Section]----------------------*/
+
 
 
