--- a/portfoliostyles.css
+++ b/portfoliostyles.css
@@ -141,181 +141,9 @@ select {
     background-color: #22223b;
 }
 
-
-
-
-/*----------------------[Header Section]----------------------*/
-
-header {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: #22223B;
-    color: white;
-    flex-wrap: wrap;
-    border-radius: 20px;
-    box-shadow: 10px 5px 25px gray;
-}
-
-.headertitle {
-    text-align: center;
-}
-
-.headersubtext {
-    margin-left: 5px;
-}
-
-/*----------------------[Hero Section]----------------------*/
-
-.hero {
+.projectsandtitle {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    position: relative;
-    justify-content: center;
-    
-}
-
-.heromaintext {
-    font-size: 50px;
-    position: absolute;
-    color: white;
-    padding-bottom: 100px;
     text-align: center;
 }
-
-.herosubtext {
-    font-size: 30px;
-    position: absolute;
-    color: white;
-    padding-top: 150px;
-    text-align: center;
-}
-
-.img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
-}
-  
-
-
-/*----------------------[Portfolio Section]----------------------*/
-
-
-.portfolio {
-    display: flex;
-    justify-content: start;
-    flex-direction: column;
-    align-items: center;
-    height: 3000px;
-    margin: 0px;
-    flex-wrap: nowrap;
-    text-align: center;
-}
-
-.portfoliomaintext {
-    font-size: 50px;
-    color: black; 
-    text-align: center;
-}
-
-
-.portfolioimg {
-    max-width: 90%;
-    border: black solid;
-    height: auto;
-    border-radius: 25px;
-    flex-shrink: 1;
-}
-
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.portfoliolink {
-    margin-bottom: 100px;
-}
-
-#portfoliolink3 {
-    margin-bottom: 50px;
-}
-
-.portfoliolink:hover {
-    animation: text-shadow-drop-center 0.2s both;
-}
-
-#seemorebutton {
-    padding: 25px 0px;
-}
-
-/*----------------------[Services Section]----------------------*/
-
-
-.services {
-    margin-top: 200px;
-    height: 300px;
-    display: flex;
-    padding-top: 75px;
-    align-items: center;
-    flex-direction: column;
-    border: #4A4E69 solid;
-    border-radius: 10px;
-}
-
-.servicesmaintext {
-    font-size: 50px;
-}
-
-#servicesbutton {
-    padding: 30px 75px;
-}
-
-
-  
-
-
-/*----------------------[About Us Section]----------------------*/
-
-.aboutus {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 150px;
-    margin-top: 30px;
-    border-radius: 10px;
-    border-style: solid;
-    border-color: #22223B;
-    border-width: 10px;
-    max-width: 1887px;
-    text-align: center;
-    background-color:#C9ADA7;
-}
-
-.aboutmaintext {
-    font-size: 50px;
-    color: black;
-    margin-top: 30px;
-    color: #22223B;
-}
-
-.aboutparagraph {
-    margin-bottom: 30px;
-    color: #22223B;
-}
-
-
-/*----------------------[HOMEPAGE END]----------------------*/
-
-
-
-
-
-
-
-
-
 
