--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,11 @@ header {
     font-family: 'Nemoy';
 }
 
+.headertitle:hover {
+  text-shadow: 5px 5px 20px gray ;
+  cursor:pointer;
+}
+
 
 .headersubtext {
     margin-left: 5px;
@@ -210,10 +215,11 @@ header {
     justify-content: start;
     flex-direction: column;
     align-items: center;
-    height: 3000px;
+    height: 3200px;
     margin: 0px;
     flex-wrap: nowrap;
     text-align: center;
+    border-radius: 15px;
 }
 
 .portfoliomaintext {
@@ -257,7 +263,7 @@ a {
 
 
 .services {
-    margin-top: 200px;
+    margin-top: 50px;
     height: 300px;
     display: flex;
     padding-top: 75px;
