--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,7 @@ header {
 
 .headertitle {
     text-align: center;
-    font-family: 'Nemoy';
+    font-family: 'Nemoy', Arial, Helvetica, sans-serif;
 }
 
 .headertitle:hover {
@@ -171,6 +171,7 @@ header {
 .headersubtext {
     margin-left: 5px;
 }
+
 
 /*----------------------[Hero Section]----------------------*/
 
@@ -215,17 +216,19 @@ header {
     justify-content: start;
     flex-direction: column;
     align-items: center;
-    height: 3200px;
-    margin: 0px;
+    height: 160rem;
+    margin: 0.3rem;
     flex-wrap: nowrap;
     text-align: center;
-    border-radius: 15px;
-}
+    border-radius: 10px;
+    background: linear-gradient(#87ceeb, #2894FC);
+  }
 
 .portfoliomaintext {
     font-size: 50px;
     color: black; 
     text-align: center;
+    font-family: 'Nemoy', Arial, Helvetica, sans-serif;
 }
 
 
@@ -257,24 +260,32 @@ a {
 
 #seemorebutton {
     padding: 25px 0px;
+    background-color: white;
+    border: white solid 2px;
+    color: #2894FC;
+}
+
+#seemorebutton:hover {
+  background-color: #2894FC;
+  color: white;
+  border: white solid 2px;
 }
 
 /*----------------------[Services Section]----------------------*/
 
 
 .services {
-    margin-top: 50px;
     height: 300px;
     display: flex;
     padding-top: 75px;
     align-items: center;
     flex-direction: column;
-    border: #4A4E69 solid;
     border-radius: 10px;
 }
 
 .servicesmaintext {
     font-size: 50px;
+    font-family: 'Nemoy', Arial, Helvetica, sans-serif;
 }
 
 #servicesbutton {
@@ -293,7 +304,7 @@ a {
     justify-content: center;
     align-items: center;
     padding: 0px 150px;
-    margin-top: 30px;
+    margin-top: 0.3rem;
     border-radius: 10px;
     border-style: solid;
     border-color: #22223B;
