--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * { 
     font-family: Arial, Helvetica, sans-serif;
+    user-select: none;
 }
 
 body  {
@@ -170,6 +171,8 @@ header {
 
 .headersubtext {
     margin-left: 5px;
+    font-family: 'Nemoy', Arial, Helvetica, sans-serif;
+    font-weight: 300;
 }
 
 
@@ -206,6 +209,27 @@ header {
     border-radius: 10px;
 }
   
+/*----------------------[Programming Languages Section]----------------------*/
+
+.programminglanguages {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.programminglanguagesmaintext {
+  font-family: 'Nemoy', Arial, Helvetica, sans-serif;
+  font-size: 50px;
+  color: black; 
+  font-weight: bolder;
+}
+
+.languagelogo {
+  max-width:  50px;
+  max-height: 50px;
+  margin: 10px;
+}
+
 
 
 /*----------------------[Portfolio Section]----------------------*/
@@ -216,7 +240,7 @@ header {
     justify-content: start;
     flex-direction: column;
     align-items: center;
-    height: 160rem;
+    height: 200rem;
     margin: 0.3rem;
     flex-wrap: nowrap;
     text-align: center;
