--- a/servicesstyles.css
+++ b/servicesstyles.css
@@ -96,3 +96,26 @@ li {
     font-size: 40px;
     color: green;
 }
+
+.example {
+    color: gainsboro;
+    font-family: 'Xolonium', Arial, Helvetica, sans-serif;
+}
+
+button {
+    height: 40px;
+    width: 120px;
+    border-radius: 10px;
+    border-style: none;
+    background-color: #4A4E69;
+    color: white;
+    font-weight: bolder;
+    font-size: 15px;
+    cursor: pointer;
+    font-family: 'Xolonium', Arial, Helvetica, sans-serif;
+    margin-top: 20px;
+}
+
+button:hover {
+    filter:brightness(0.90);
+}
